--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(DEFAULT_CANDIDATES_NEIGHBORS)
 export(DEFAULT_CHEM_SCORES)
 export(DEFAULT_HC_MAX_RT_ERROR_MIN)
 export(DEFAULT_HC_SCORE_BIO_MIN)
+export(DEFAULT_HC_SCORE_CHEM_MIN)
 export(DEFAULT_HC_SCORE_FINAL_MIN)
 export(DEFAULT_HC_SCORE_INITIAL_MIN)
 export(DEFAULT_HC_SCORE_SIRIUS_MIN)
@@ -19,6 +20,7 @@ export(DEFAULT_LOG_LEVEL)
 export(DEFAULT_MINIMAL_CONSISTENCY)
 export(DEFAULT_MINIMAL_MS1_BIO)
 export(DEFAULT_MINIMAL_MS1_CHEMO)
+export(DEFAULT_MINIMAL_MS1_CONDITION)
 export(DEFAULT_NUM_WORKERS)
 export(DEFAULT_PROGRESS_INTERVAL)
 export(DEFAULT_TOLERANCE_PPM_MS1)
@@ -36,6 +38,7 @@ export(PROTON_MASS_DALTONS)
 export(TABLE_EXTENSIONS)
 export(VALID_MS_MODES)
 export(VALID_SIMILARITY_METHODS)
+export(WEIGHT_SUM_TOLERANCE)
 export(annotate_masses)
 export(annotate_spectra)
 export(calculate_mass_of_m)
