--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,6 +35,7 @@ export(MAX_TOLERANCE_RT_ADDUCTS)
 export(MIN_MASS_DALTONS)
 export(MODIFICATION_REGEX_PATTERN)
 export(PROTON_MASS_DALTONS)
+export(SPECTRAL_FORMATS)
 export(TABLE_EXTENSIONS)
 export(VALID_MS_MODES)
 export(VALID_SIMILARITY_METHODS)
