--- a/NAMESPACE
+++ b/NAMESPACE
@@ -46,10 +46,17 @@ export(calculate_mass_of_m)
 export(calculate_mz_from_mass)
 export(calculate_similarity)
 export(change_params_small)
+export(clean_collapse)
+export(complement_metadata_structures)
 export(create_components)
 export(create_dir)
 export(create_edges_spectra)
+export(decorate_chemo)
+export(decorate_masses)
+export(dist_get)
+export(dist_groups)
 export(export_output)
+export(export_params)
 export(fake_ecmdb)
 export(fake_hmdb)
 export(fake_lotus)
@@ -61,6 +68,8 @@ export(get_last_version_from_zenodo)
 export(get_organism_taxonomy_ott)
 export(get_params)
 export(go_to_cache)
+export(harmonize_adducts)
+export(harmonize_spectra)
 export(import_spectra)
 export(install)
 export(join_gnps_wrapper)
@@ -83,8 +92,14 @@ export(prepare_params)
 export(prepare_taxa)
 export(process_smiles)
 export(read_mgf_opti)
+export(replace_id)
+export(round_reals)
 export(run_app)
 export(sanitize_spectra)
+export(select_annotations_columns)
+export(select_sop_columns)
+export(split_tables_sop)
+export(summarize_results)
 export(tima_full)
 export(weight_annotations)
 useDynLib(tima, .registration = TRUE)
