--- a/NAMESPACE
+++ b/NAMESPACE
@@ -42,38 +42,51 @@ export(VALID_SIMILARITY_METHODS)
 export(WEIGHT_SUM_TOLERANCE)
 export(annotate_masses)
 export(annotate_spectra)
+export(benchmark_taxize_spectra)
+export(calculate_entropy_and_similarity)
 export(calculate_mass_of_m)
 export(calculate_mz_from_mass)
 export(calculate_similarity)
 export(change_params_small)
+export(clean_bio)
 export(clean_collapse)
+export(columns_model)
 export(complement_metadata_structures)
 export(create_components)
 export(create_dir)
+export(create_edges)
 export(create_edges_spectra)
+export(decorate_bio)
 export(decorate_chemo)
 export(decorate_masses)
 export(dist_get)
 export(dist_groups)
 export(export_output)
 export(export_params)
+export(export_spectra_rds)
+export(extract_spectra)
 export(fake_ecmdb)
 export(fake_hmdb)
 export(fake_lotus)
 export(filter_annotations)
+export(filter_high_confidence_only)
 export(get_default_paths)
 export(get_example_files)
 export(get_file)
+export(get_gnps_tables)
 export(get_last_version_from_zenodo)
 export(get_organism_taxonomy_ott)
 export(get_params)
+export(get_path)
 export(go_to_cache)
 export(harmonize_adducts)
 export(harmonize_spectra)
 export(import_spectra)
 export(install)
 export(join_gnps_wrapper)
+export(load_yaml_files)
 export(parse_adduct)
+export(parse_cli_params)
 export(parse_yaml_params)
 export(prepare_annotations_gnps)
 export(prepare_annotations_sirius)
@@ -91,15 +104,21 @@ export(prepare_libraries_spectra)
 export(prepare_params)
 export(prepare_taxa)
 export(process_smiles)
+export(read_from_sirius_zip)
 export(read_mgf_opti)
 export(replace_id)
 export(round_reals)
 export(run_app)
 export(sanitize_spectra)
 export(select_annotations_columns)
+export(select_sirius_columns_canopus)
+export(select_sirius_columns_formulas)
+export(select_sirius_columns_structures)
 export(select_sop_columns)
 export(split_tables_sop)
 export(summarize_results)
 export(tima_full)
 export(weight_annotations)
+export(weight_bio)
+export(weight_chemo)
 useDynLib(tima, .registration = TRUE)
