--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,6 +28,7 @@ export(DEFAULT_TOLERANCE_PPM_MS2)
 export(DEFAULT_TOLERANCE_RT_ADDUCTS)
 export(DEFAULT_TOLERANCE_RT_LIBRARY)
 export(ELECTRON_MASS_DALTONS)
+export(INCHI_NO_STEREO_PATTERN)
 export(LOG_LEVELS)
 export(MAX_MASS_DALTONS)
 export(MAX_TOLERANCE_PPM)
