--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -174,8 +174,8 @@ Collate:
     'prepare_taxa.R'
     'replace_id.R'
     'run_app.R'
+    'run_tima.R'
     'tima-package.R'
-    'tima_full.R'
     'transform_score_sirius_csi.R'
     'weights_utils.R'
     'weight_chemo.R'
