--- a/NAMESPACE
+++ b/NAMESPACE
@@ -39,6 +39,6 @@ export(prepare_taxa)
 export(process_smiles)
 export(read_mgf_opti)
 export(run_app)
-export(tima_full)
+export(run_tima)
 export(weight_annotations)
 useDynLib(tima, .registration = TRUE)
