`tima_full` -> `run_tima`

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,5 +40,6 @@ export(process_smiles)
 export(read_mgf_opti)
 export(run_app)
 export(run_tima)
+export(tima_full)
 export(weight_annotations)
 useDynLib(tima, .registration = TRUE)
