--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -40,9 +40,10 @@ Imports:
     MsCoreUtils (>= 1.18.0),
     msentropy (>= 0.1.4),
     purrr (>= 1.2.0),
-    reticulate (>= 1.44.0),
+    R.utils (>= 2.13.0),
+    reticulate (>= 1.44.1),
     rotl (>= 3.1.0),
-    shiny (>= 1.11.1),
+    shiny (>= 1.12.0),
     Spectra (>= 1.16.1),
     stats,
     stringi (>= 1.8.7),
@@ -51,7 +52,7 @@ Imports:
     tidyselect (>= 1.2.1),
     tidytable (>= 0.11.2),
     utils,
-    yaml (>= 2.3.10)
+    yaml (>= 2.3.11)
 Suggests:
     altdoc (>= 0.7.0),
     BiocManager (>= 1.30.26),
