--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -69,6 +69,7 @@ Suggests:
     shinyvalidate (>= 0.1.3),
     spelling (>= 2.3.2),
     testthat (>= 3.3.0),
+    visNetwork (>= 2.1.4),
     withr (>= 3.0.2)
 SystemRequirements:
     python (< 3.14,>= 3.10)
