--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,6 +28,7 @@ export(prepare_features_components)
 export(prepare_features_edges)
 export(prepare_features_tables)
 export(prepare_libraries_rt)
+export(prepare_libraries_sop_bigg)
 export(prepare_libraries_sop_closed)
 export(prepare_libraries_sop_ecmdb)
 export(prepare_libraries_sop_hmdb)
