--- a/inst/params/default/create_edges_spectra.yaml
+++ b/inst/params/default/create_edges_spectra.yaml
@@ -24,7 +24,7 @@ ms:
     #' MS2 related parameters.
     ms2:
       #' Intensity threshold for MS2. FLOAT
-      intensity: 0.0
+      intensity: null
 
   #' Tolerances.
   tolerances:
