--- a/inst/params/prepare_params_advanced.yaml
+++ b/inst/params/prepare_params_advanced.yaml
@@ -441,7 +441,7 @@ ms:
     #' MS2 related parameters.
     ms2:
       #' Intensity threshold for MS2. FLOAT
-      intensity: 0.0
+      intensity: null
 
   #' Tolerances.
   tolerances:
