--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,10 @@ export(go_to_cache)
 export(harmonize_adducts)
 export(import_spectra)
 export(install)
+export(log_complete)
+export(log_failed)
+export(log_metadata)
+export(log_operation)
 export(parse_adduct)
 export(prepare_annotations_gnps)
 export(prepare_annotations_sirius)
@@ -43,4 +47,5 @@ export(run_app)
 export(run_tima)
 export(tima_full)
 export(weight_annotations)
+export(with_logging)
 useDynLib(tima, .registration = TRUE)
