--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -113,7 +113,6 @@ Collate:
     'go_to_cache.R'
     'create_dir.R'
     'change_params_small.R'
-    'classify_structures.R'
     'clean_bio.R'
     'summarize_results.R'
     'filter_high_confidence_only.R'
@@ -177,8 +176,10 @@ Collate:
     'replace_id.R'
     'run_app.R'
     'run_tima.R'
+    'sanitize_data.R'
     'tima-package.R'
     'transform_score_sirius_csi.R'
+    'validate_inputs.R'
     'weights_utils.R'
     'weight_chemo.R'
     'weight_bio.R'
