--- a/NAMESPACE
+++ b/NAMESPACE
@@ -45,7 +45,9 @@ export(process_smiles)
 export(read_mgf_opti)
 export(run_app)
 export(run_tima)
+export(sanitize_all_inputs)
 export(tima_full)
+export(validate_inputs)
 export(weight_annotations)
 export(with_logging)
 useDynLib(tima, .registration = TRUE)
