--- a/altdoc/quarto_website.yml
+++ b/altdoc/quarto_website.yml
@@ -162,11 +162,11 @@ format:
   html:
     grid:
       body-width: 1200px
+    linkcolor: "#3377c4"
     respect-user-color-scheme: true
     toc: true
-    theme:
-      light: flatly
-      dark: darkly
+    theme: 
+      - none
 
 knitr:
   opts_knit:
