--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ export(log_metadata)
 export(log_operation)
 export(parse_adduct)
 export(prepare_annotations_gnps)
+export(prepare_annotations_mzmine)
 export(prepare_annotations_sirius)
 export(prepare_annotations_spectra)
 export(prepare_features_components)
