--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,7 @@ export(log_operation)
 export(parse_adduct)
 export(prepare_annotations_gnps)
 export(prepare_annotations_mzmine)
+export(prepare_annotations_mztab)
 export(prepare_annotations_sirius)
 export(prepare_annotations_spectra)
 export(prepare_features_components)
@@ -44,6 +45,8 @@ export(prepare_params)
 export(prepare_taxa)
 export(process_smiles)
 export(read_mgf_opti)
+export(read_mztab)
+export(resolve_inchikey_from_smiles)
 export(run_app)
 export(run_tima)
 export(sanitize_all_inputs)
@@ -51,4 +54,5 @@ export(tima_full)
 export(validate_inputs)
 export(weight_annotations)
 export(with_logging)
+export(write_mztab)
 useDynLib(tima, .registration = TRUE)
